coupling language repo in rpgitems and nyaacore internal